--- a/src/Senfter/Coder.fxml
+++ b/src/Senfter/Coder.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Senfter.Coder_Controller">
@@ -48,13 +49,6 @@
          </BorderPane.margin>
       </TextField>
    </top>
-   <bottom>
-      <TextField fx:id="last" editable="false" promptText="The final Form" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin>
-      </TextField>
-   </bottom>
    <left>
       <Button fx:id="back" mnemonicParsing="false" onAction="#decode" text="F go back" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -62,4 +56,20 @@
          </BorderPane.margin>
       </Button>
    </left>
+   <bottom>
+      <HBox prefHeight="17.0" prefWidth="580.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="last" editable="false" prefHeight="26.0" prefWidth="484.0" promptText="The final Form">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </TextField>
+            <Button fx:id="copy" mnemonicParsing="false" onAction="#copy" text="Copy">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
