redid code and added koerpermodell stuff

--- a/src/Senfter/Coder/Coder.fxml
+++ b/src/Senfter/Coder/Coder.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Senfter.Coder_Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Senfter.Coder.Coder_Controller">
    <right>
       <Button fx:id="forth" mnemonicParsing="false" onAction="#encode" text="Upgrade" BorderPane.alignment="CENTER">
          <BorderPane.margin>
